Commentaires en cours

--- a/src/EventBundle/Resources/config/routing.yml
+++ b/src/EventBundle/Resources/config/routing.yml
@@ -19,4 +19,7 @@ details_event:
 data_datatable:
     path:     /data_datatable
     defaults: { _controller: EventBundle:Event:data }
+test_event:
+    path:     /test
+    defaults: { _controller: EventBundle:Event:test }
 
